Bug 942217 - Undefine LoadImage to prevent naming conflict on Windows. r=ehsan